# payments

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  architecture.txt  celerybeat-schedule  compose.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test.py
.claude/: README.md  settings.json
.claude/agents/: codebase-locator.md  django-backend-reviewer.md  payment-flow-reviewer.md
.claude/hooks/: format-on-save.sh  guard-branch.sh  guard-pr.sh  lint-on-stop.sh  session-start.sh
.codex/: config.toml  hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd.yaml  prod.yml  stage.yml  test.yml
api/: admin.py  models.py  tests.py  urls.py  views.py
api/middleware/: gateway.py
api/migrations/: 0001_initial.py  0002_alter_ratelimitattempt_created_at_and_more.py
audit/: admin.py  mixins.py  models.py
audit/migrations/: 0001_initial.py  0002_alter_auditconfiguration_created_at_and_more.py
audit/services/: request_context.py
base/: models.py  views.py
core/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_chargeableevent_callback_destination_and_more.py  0003_remove_providercallbacklog_core_provid_process_214244_idx_and_more.py  0004_alter_providercallbacklog_status.py  0007_alter_paymentintent_status.py  (+2 more)
helm/: prod.yml  stage.yml
payments/: celery.py  settings.py  urls.py
spin_payments/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
utils/: common.py  extended_request.py  response_provider.py
(+11 files in other folders)
