[project]
name = "spin-payments"
version = "0.1.0"
authors = [
    { name = "Eutychus Towett", email = "ektowett@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "django>=5.2.11",
    "django-celery-beat>=2.8.1",
    "django-cors-headers>=4.9.0",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "stripe>=14.3.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    "**/migrations/*",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line-too-long (the formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["F403", "F405"]
"**/tests.py" = ["S101"]
"audit/models.py" = ["DJ001"]
"core/models.py" = ["DJ001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
